--- a/FlowCode/login.html
+++ b/FlowCode/login.html
@@ -11,7 +11,13 @@
     </head>
     <body>
         <div class="gridContainer">
-            <div class="gridItem space-1">Espaco 1</div>
+            <div class="gridItem space-1">
+                <img src="images/fundo_laranja.png" alt="">
+                <h1>Bem-Vindo!</h1>
+
+                <p> <p>Entre em sua conta e tenha uma nova experiência 
+                    de aprendizagem a lógica de programação.</p></p>
+            </div>
 
             <div class="gridItem space-2">
                 <h1>Entre na sua conta</h1>
@@ -28,6 +34,8 @@
                         </label>
     
                         <input type="checkbox" name="remember" id="remember">Lembrar de mim
+
+                        <button type="submit">Entrar</button>
                     </form>
                 </fieldset>
             </h1>
