--- a/FlowCode/login.html
+++ b/FlowCode/login.html
@@ -12,11 +12,12 @@
     <body>
         <div class="gridContainer">
             <div class="gridItem space-1">
-                <img src="images/fundo_laranja.png" alt="">
+                <img src="./images/FlowCode3.png" alt="">
+
                 <h1>Bem-Vindo!</h1>
 
-                <p> <p>Entre em sua conta e tenha uma nova experiência 
-                    de aprendizagem a lógica de programação.</p></p>
+                <p>Entre em sua conta e tenha uma nova experiência 
+                    de aprendizagem a lógica de programação.</p>
             </div>
 
             <div class="gridItem space-2">
