--- a/FlowCode/login.html
+++ b/FlowCode/login.html
@@ -33,8 +33,10 @@
                             <a href="">Esqueceu a senha?</a>
                             <input type="password" name="password" id="password">
                         </label>
-    
-                        <input type="checkbox" name="remember" id="remember">Lembrar de mim
+
+                        <label for="remember">Lembrar de mim
+                            <input type="checkbox" name="remember" id="remember">
+                        </label>
 
                         <button type="submit">Entrar</button>
                     </form>
