--- a/FlowCode/login.html
+++ b/FlowCode/login.html
@@ -4,8 +4,8 @@
     <head>
         <title>Faça Login</title>
         <meta charset="utf-8">
-        <meta name="author" content="Daniel">
-        <meta name="description" content="descrição bacanuda">
+        <meta name="author" content="">
+        <meta name="description" content="">
         <meta name="keywords" content="html5, tecnologia">
         <link rel="stylesheet" href="style/style_comuns.css">
     </head>
@@ -34,14 +34,13 @@
                             <input type="password" name="password" id="password">
                         </label>
 
-                        <label for="remember">Lembrar de mim
-                            <input type="checkbox" name="remember" id="remember">
-                        </label>
+                        <input type="checkbox" name="remember" id="remember">Lembrar de mim
 
-                        <button type="submit">Entrar</button>
+                        <button type="submit" class="btn-entrar">Entrar</button>
                     </form>
                 </fieldset>
-            </h1>
+
+                <!--<hr class="hr-separator"> -->
             </div>
         </div>
     </body>
