--- a/FlowCode/login.html
+++ b/FlowCode/login.html
@@ -7,6 +7,8 @@
         <meta name="author" content="">
         <meta name="description" content="">
         <meta name="keywords" content="html5, tecnologia">
+        <script src="https://kit.fontawesome.com/0f251f1c56.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="style/style_comuns.css">
     </head>
     <body>
@@ -39,6 +41,16 @@
                         <button type="submit" class="btn-entrar">Entrar</button>
                     </form>
                 </fieldset>
+
+                <div class="container outher_login">
+                   <hr>
+                   <button class="google-button">
+                    <img src="" alt="">
+                    Entrar com Google
+                  </button>
+                  
+                    <p>Não tem uma conta ainda? Clique no butão e cadastre-se <button type="button" class="btn-cadastre">cadastre-se</button></p>
+                </div>
 
                 <!--<hr class="hr-separator"> -->
             </div>
