--- a/FlowCode/login.html
+++ b/FlowCode/login.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="html5, tecnologia">
         <script src="https://kit.fontawesome.com/0f251f1c56.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link rel="stylesheet" href="style/styles_comuns.css">
+        <link rel="stylesheet" href="/FlowCode/style/style_comuns.css">
     </head>
     <body>
         <div class="gridContainer">
