--- a/pages/login.html
+++ b/pages/login.html
@@ -54,6 +54,6 @@
 
             </div>
         </div>
-        <script src="./pass.js"></script>
+        <script src="../javaScript/pass.js"></script>
     </body>
 </html>
