--- a/FlowCode/pages/login.html
+++ b/FlowCode/pages/login.html
@@ -13,7 +13,7 @@
     <body>
         <div class="gridContainer">
             <div class="gridItem space-1">
-                <img src="./images/FlowCode3.png" alt="">
+                <img src="../images/FlowCode3.png" alt="">
 
                 <h1>Bem-Vindo!</h1>
 
@@ -46,7 +46,7 @@
                 <div class="container outher_login">
                    <hr>
                    <button class="google-button">
-                    <img src="./images/iconeGoogle.png" alt="">Google
+                    <img src="../images/iconeGoogle.png" alt="">Google
                   </button>
                   
                     <p>Não tem uma conta ainda? Clique no butão e cadastre-se <button type="button" class="btn-cadastre btn-hover">cadastre-se</button></p>
