--- a/FlowCode/pages/login.html
+++ b/FlowCode/pages/login.html
@@ -49,7 +49,7 @@
                     <img src="../images/iconeGoogle.png" alt="">Google
                   </button>
                   
-                    <p>Não tem uma conta ainda? Clique no butão e cadastre-se <button type="button" class="btn-cadastre btn-hover">cadastre-se</button></p>
+                    <p>Não tem uma conta ainda? Clique no butão e cadastre-se <button type="button" class="btn-cadastre btn-hover" onclick="Cadastrar()">cadastre-se</button></p>
                 </div>
 
             </div>
