--- a/FlowCode/pages/login.html
+++ b/FlowCode/pages/login.html
@@ -30,10 +30,10 @@
                             <input type="email" name="email" id="email" placeholder="user@gmail.com">
                         </label>
     
-                        <label for="password">Senha
+                        <label for="pass" class="pass">Senha
                             <a href="">Esqueceu a senha?</a>
-                            <input type="password" id="password" name="password" placeholder="Digite sua senha" required><span class="password-toggle"></span>
-                            <span class="password-toggle"></span>
+                            <img src="https://cdn0.iconfinder.com/data/icons/ui-icons-pack/100/ui-icon-pack-14-512.png" id="olho" class="olho">
+                            <input type="password" id="pass" name="password" placeholder="Digite sua senha"required>
                         </label>
 
                         <input type="checkbox" name="remember" id="remember">Lembrar de mim
@@ -49,7 +49,10 @@
                     <img src="../images/iconeGoogle.png" alt="">Google
                   </button>
                   
-                    <p>Não tem uma conta ainda? Clique no butão e cadastre-se <button type="button" class="btn-cadastre btn-hover" onclick="Cadastrar()">cadastre-se</button></p>
+                    <p>Não tem uma conta ainda? Clique no butão e cadastre-se 
+                        <button type="button" class="btn-cadastre btn-hover" onclick="Cadastrar()">cadastre-se
+                        </button>
+                    </p>
                 </div>
 
             </div>
