--- a/FlowCode/pages/cadastro.html
+++ b/FlowCode/pages/cadastro.html
@@ -18,8 +18,7 @@
 
             <h1>Bem-Vindo!</h1>
 
-            <p>Entre em sua conta e tenha uma nova experiência 
-                de aprendizagem a lógica de programação.</p>
+            <p>Cadastre-se e tenha uma nova experência de aprendizagem a lógica de progromação.</p>
         </div>
 
         <div class="gridItem space-2">
@@ -36,7 +35,6 @@
                     </label>
 
                     <label for="pass" class="pass">Senha
-                        <a href="">Esqueceu a senha?</a>
                         <img src="https://cdn0.iconfinder.com/data/icons/ui-icons-pack/100/ui-icon-pack-14-512.png" id="olho" class="olho">
                         <input type="password" id="pass" name="password" placeholder="Digite sua senha"required>
                     </label>
@@ -55,7 +53,7 @@
                 </button>
               
                 <p id="enter">Não tem uma conta ainda? <a href="login.html">Entre aqui</a></p>
-                <p id="politicas">Ao se registrar, você concorda com nossos Termos de Serviço e você reconhece
+                <p class="politicas">Ao se registrar, você concorda com nossos Termos de Serviço e você reconhece
                      que leu e entendeu nossa Política de Privacidade.
                 </p>
             </div>
