--- a/FlowCode/pages/login.html
+++ b/FlowCode/pages/login.html
@@ -31,7 +31,7 @@
                         </label>
     
                         <label for="pass" class="pass">Senha
-                            <a href="">Esqueceu a senha?</a>
+                            <a href="recuperar-senha.html">Esqueceu a senha?</a>
                             <img src="https://cdn0.iconfinder.com/data/icons/ui-icons-pack/100/ui-icon-pack-14-512.png" id="olho" class="olho">
                             <input type="password" id="pass" name="password" placeholder="Digite sua senha"required>
                         </label>
