--- a/FlowCode/pages/recuperar-senha.html
+++ b/FlowCode/pages/recuperar-senha.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="pt-br">
     <head>
-        <title>Faça Login</title>
+        <title>Recuperar senha</title>
         <meta charset="utf-8">
         <meta name="author" content="">
         <meta name="description" content="">
@@ -29,16 +29,13 @@
                 <fieldset>
                     <form action="">
                         <label for="email">Endereço de e-mail ou nome de usuário
-                            <input type="email" name="email" id="email" placeholder="user@gmail.com">
+                            <input class="email-recuperacao" type="email" name="email" id="email" placeholder="user@gmail.com">
                         </label>
-    
-                    
-
-                        <button type="submit" class="btn-entrar btn-hover">Enviar link de recuperação</button>
+                        <button type="submit" class="btn-entrar btn-hover btn-recuperar">Enviar link de recuperação</button>
                     </form>
                 </fieldset>
  
-                <p id="text-forget">Lembrou a senha? <a href="../pages/login.html">Entre aqui</a></p>
+                <p class="text-forget">Lembrou a senha? <a href="../pages/login.html">Entre aqui</a></p>
 
             </div>
         </div>
