--- a/FlowCode/pages/login.html
+++ b/FlowCode/pages/login.html
@@ -38,7 +38,7 @@
 
                         <input type="checkbox" name="remember" id="remember">Lembrar de mim
 
-                        <button type="submit" class="btn-entrar btn-hover">Entrar</button>
+                        <button type="submit" class="btn-entrar btn-hover" onclick="Entrar();">Entrar</button>
                     </form>
                 </fieldset>
                 <!--hr-separator -->
