--- a/FlowCode/pages/tela-arquivos.html
+++ b/FlowCode/pages/tela-arquivos.html
@@ -19,9 +19,9 @@
                 <button>Home</button>
                 <button>Quem Somos</button>
                 <button>Dúvidas</button>
-              </div>
+            </div>
               
-              <i class="fas fa-bars hamburguer"></i>
+            <i class="fas fa-bars hamburguer"></i>
    
             <p >Encontre seus arquivos</p>
             <i class="fas fa-search lupa"></i>
@@ -67,6 +67,54 @@
             
             <div class="hr-wrapper">
                 <hr>
+            </div>
+
+            <div class="gridContainerArquivos">
+                <div class="gridItemArquivos">
+                    <div class="fileCapition">
+                        <i class="fas fa-project-diagram"></i>
+                        <h1 class="titleFile">Título arquivo</h1>
+                        <p>editado há 2min</p>
+                        <i class="far fa-star icon-caption"></i>
+                        <i class="fas fa-ellipsis-v icon-caption"></i>
+                    </div>
+                </div>
+                <div class="gridItemArquivos">
+                    <div class="fileCapition">
+                        <i class="fas fa-project-diagram"></i>
+                        <h1 class="titleFile">Título arquivo</h1>
+                        <p>editado há 2min</p>
+                        <i class="far fa-star icon-caption"></i>
+                        <i class="fas fa-ellipsis-v icon-caption"></i>
+                    </div>
+                </div>
+                <div class="gridItemArquivos">
+                    <div class="fileCapition">
+                        <i class="fas fa-project-diagram"></i>
+                        <h1 class="titleFile">Título arquivo</h1>
+                        <p>editado há 2min</p>
+                        <i class="far fa-star icon-caption"></i>
+                        <i class="fas fa-ellipsis-v icon-caption"></i>
+                    </div>
+                </div>
+                <div class="gridItemArquivos">
+                    <div class="fileCapition">
+                        <i class="fas fa-project-diagram"></i>
+                        <h1 class="titleFile">Título arquivo</h1>
+                        <p>editado há 2min</p>
+                        <i class="far fa-star icon-caption"></i>
+                        <i class="fas fa-ellipsis-v icon-caption"></i>
+                    </div>
+                </div>
+                <div class="gridItemArquivos">
+                    <div class="fileCapition">
+                        <i class="fas fa-project-diagram diagram-caption"></i>
+                        <h1 class="titleFile">Título arquivo</h1>
+                        <p>editado há 2min</p>
+                        <i class="far fa-star icon-caption"></i>
+                        <i class="fas fa-ellipsis-v icon-caption"></i>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
