--- a/FlowCode/pages/tela-arquivos.html
+++ b/FlowCode/pages/tela-arquivos.html
@@ -72,47 +72,67 @@
             <div class="gridContainerArquivos">
                 <div class="gridItemArquivos">
                     <div class="fileCapition">
-                        <i class="fas fa-project-diagram"></i>
-                        <h1 class="titleFile">Título arquivo</h1>
-                        <p>editado há 2min</p>
-                        <i class="far fa-star icon-caption"></i>
-                        <i class="fas fa-ellipsis-v icon-caption"></i>
-                    </div>
-                </div>
-                <div class="gridItemArquivos">
-                    <div class="fileCapition">
-                        <i class="fas fa-project-diagram"></i>
-                        <h1 class="titleFile">Título arquivo</h1>
-                        <p>editado há 2min</p>
-                        <i class="far fa-star icon-caption"></i>
-                        <i class="fas fa-ellipsis-v icon-caption"></i>
-                    </div>
-                </div>
-                <div class="gridItemArquivos">
-                    <div class="fileCapition">
-                        <i class="fas fa-project-diagram"></i>
-                        <h1 class="titleFile">Título arquivo</h1>
-                        <p>editado há 2min</p>
-                        <i class="far fa-star icon-caption"></i>
-                        <i class="fas fa-ellipsis-v icon-caption"></i>
-                    </div>
-                </div>
-                <div class="gridItemArquivos">
-                    <div class="fileCapition">
-                        <i class="fas fa-project-diagram"></i>
-                        <h1 class="titleFile">Título arquivo</h1>
-                        <p>editado há 2min</p>
-                        <i class="far fa-star icon-caption"></i>
-                        <i class="fas fa-ellipsis-v icon-caption"></i>
+                        <i class="fas fa-project-diagram diagram-caption"></i>
+                        <div class="title">
+                            <h1>Título arquivo</h1>
+                            <p>editado há 2min</p>
+                        </div>
+                        <div class="icons">
+                            <button class="btnStar" onclick="changeColor(this)"><i class="far fa-star icon-caption"></i></button>
+                            <i class="fas fa-ellipsis-v icon-caption"></i>
+                        </div>
                     </div>
                 </div>
                 <div class="gridItemArquivos">
                     <div class="fileCapition">
                         <i class="fas fa-project-diagram diagram-caption"></i>
-                        <h1 class="titleFile">Título arquivo</h1>
-                        <p>editado há 2min</p>
-                        <i class="far fa-star icon-caption"></i>
-                        <i class="fas fa-ellipsis-v icon-caption"></i>
+                        <div class="title">
+                            <h1>Título arquivo</h1>
+                            <p>editado há 2min</p>
+                        </div>
+                        <div class="icons">
+                            <button class="btnStar" onclick="changeColor(this)"><i class="far fa-star icon-caption"></i></button>
+                            <i class="fas fa-ellipsis-v icon-caption"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="gridItemArquivos">
+                    <div class="fileCapition">
+                        <i class="fas fa-project-diagram diagram-caption"></i>
+                        <div class="title">
+                            <h1>Título arquivo</h1>
+                            <p>editado há 2min</p>
+                        </div>
+                        <div class="icons">
+                            <button class="btnStar" onclick="changeColor(this)"><i class="far fa-star icon-caption"></i></button>
+                            <i class="fas fa-ellipsis-v icon-caption"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="gridItemArquivos">
+                    <div class="fileCapition">
+                        <i class="fas fa-project-diagram diagram-caption"></i>
+                        <div class="title">
+                            <h1>Título arquivo</h1>
+                            <p>editado há 2min</p>
+                        </div>
+                        <div class="icons">
+                            <button class="btnStar" onclick="changeColor(this)"><i class="far fa-star icon-caption"></i></button>
+                            <i class="fas fa-ellipsis-v icon-caption"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="gridItemArquivos">
+                    <div class="fileCapition">
+                        <i class="fas fa-project-diagram diagram-caption"></i>
+                        <div class="title">
+                            <h1>Título arquivo</h1>
+                            <p>editado há 2min</p>
+                        </div>
+                        <div class="icons">
+                            <button class="btnStar" onclick="changeColor(this)"><i class="far fa-star icon-caption"></i></button>
+                            <i class="fas fa-ellipsis-v icon-caption"></i>
+                        </div>
                     </div>
                 </div>
             </div>
