--- a/FlowCode/pages/tela-arquivos.html
+++ b/FlowCode/pages/tela-arquivos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <title>Cadastre-se</title>
+    <title>Seus arquivos</title>
         <meta charset="utf-8">
         <meta name="author" content="">
         <meta name="description" content="">
