--- a/FlowCode/pages/tela-arquivos.html
+++ b/FlowCode/pages/tela-arquivos.html
@@ -79,7 +79,60 @@
                         </div>
                         <div class="icons">
                             <button class="btnStar" onclick="changeColor(this)"><i class="far fa-star icon-caption"></i></button>
-                            <i class="fas fa-ellipsis-v icon-caption"></i>
+                            <i class="fas fa-ellipsis-v icon-caption btnOptions">
+                                <div class="options">
+                                        <button class="option optUm">
+                                            <i class="fas fa-trash-alt"></i>Excluir
+                                        </button>
+                                        <button class="option">
+                                            <i class="fas fa-info-circle"></i>Detalhes
+                                        </button>
+                                </div>
+                            </i>
+                        </div>
+                    </div>
+                </div>
+                <div class="gridItemArquivos">
+                    <div class="fileCapition">
+                        <i class="fas fa-folder diagram-caption"></i>
+                        <div class="title">
+                            <h1>Título arquivo</h1>
+                            <p>editado há 2min</p>
+                        </div>
+                        <div class="icons">
+                            <button class="btnStar" onclick="changeColor(this)"><i class="far fa-star icon-caption"></i></button>
+                            <i class="fas fa-ellipsis-v icon-caption btnOptions">
+                                <div class="options">
+                                        <button class="option optUm">
+                                            <i class="fas fa-trash-alt"></i>Excluir
+                                        </button>
+                                        <button class="option">
+                                            <i class="fas fa-info-circle"></i>Detalhes
+                                        </button>
+                                </div>
+                            </i>
+                        </div>
+                    </div>
+                </div>
+                <div class="gridItemArquivos">
+                    <div class="fileCapition">
+                        <i class="fas fa-folder diagram-caption"></i>
+                        <div class="title">
+                            <h1>Título arquivo</h1>
+                            <p>editado há 2min</p>
+                        </div>
+                        <div class="icons">
+                            <button class="btnStar" onclick="changeColor(this)"><i class="far fa-star icon-caption"></i></button>
+                            <i class="fas fa-ellipsis-v icon-caption btnOptions">
+                                <div class="options">
+                                        <button class="option optUm">
+                                            <i class="fas fa-trash-alt"></i>Excluir
+                                        </button>
+                                        <button class="option">
+                                            <i class="fas fa-info-circle"></i>Detalhes
+                                        </button>
+                                </div>
+                            </i>
                         </div>
                     </div>
                 </div>
@@ -92,7 +145,16 @@
                         </div>
                         <div class="icons">
                             <button class="btnStar" onclick="changeColor(this)"><i class="far fa-star icon-caption"></i></button>
-                            <i class="fas fa-ellipsis-v icon-caption"></i>
+                            <i class="fas fa-ellipsis-v icon-caption btnOptions">
+                                <div class="options">
+                                        <button class="option optUm">
+                                            <i class="fas fa-trash-alt"></i>Excluir
+                                        </button>
+                                        <button class="option">
+                                            <i class="fas fa-info-circle"></i>Detalhes
+                                        </button>
+                                </div>
+                            </i>
                         </div>
                     </div>
                 </div>
@@ -105,33 +167,16 @@
                         </div>
                         <div class="icons">
                             <button class="btnStar" onclick="changeColor(this)"><i class="far fa-star icon-caption"></i></button>
-                            <i class="fas fa-ellipsis-v icon-caption"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="gridItemArquivos">
-                    <div class="fileCapition">
-                        <i class="fas fa-project-diagram diagram-caption"></i>
-                        <div class="title">
-                            <h1>Título arquivo</h1>
-                            <p>editado há 2min</p>
-                        </div>
-                        <div class="icons">
-                            <button class="btnStar" onclick="changeColor(this)"><i class="far fa-star icon-caption"></i></button>
-                            <i class="fas fa-ellipsis-v icon-caption"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="gridItemArquivos">
-                    <div class="fileCapition">
-                        <i class="fas fa-project-diagram diagram-caption"></i>
-                        <div class="title">
-                            <h1>Título arquivo</h1>
-                            <p>editado há 2min</p>
-                        </div>
-                        <div class="icons">
-                            <button class="btnStar" onclick="changeColor(this)"><i class="far fa-star icon-caption"></i></button>
-                            <i class="fas fa-ellipsis-v icon-caption"></i>
+                            <i class="fas fa-ellipsis-v icon-caption btnOptions">
+                                <div class="options">
+                                        <button class="option optUm">
+                                            <i class="fas fa-trash-alt"></i>Excluir
+                                        </button>
+                                        <button class="option">
+                                            <i class="fas fa-info-circle"></i>Detalhes
+                                        </button>
+                                </div>
+                            </i>
                         </div>
                     </div>
                 </div>
