--- a/FlowCode/pages/cadastro.html
+++ b/FlowCode/pages/cadastro.html
@@ -27,7 +27,7 @@
             <fieldset>
                 <form action="">
                     <label for="username">Nome do usuário
-                        <input type="text" name="username" id="username">
+                        <input type="text" name="username" id="username" placeholder="nome de usuário">
                     </label>
 
                     <label for="email">E-mail profissional
@@ -36,7 +36,7 @@
 
                     <label for="pass" class="pass">Senha
                         <img src="https://cdn0.iconfinder.com/data/icons/ui-icons-pack/100/ui-icon-pack-14-512.png" id="olho" class="olho">
-                        <input type="password" id="pass" name="password" placeholder="Digite sua senha"required>
+                        <input type="password" id="pass" name="password" placeholder="sua senha"required>
                     </label>
 
                     <input type="checkbox" name="remember" id="remember">Lembrar de mim
