--- a/FlowCode/pages/tela-arquivos.html
+++ b/FlowCode/pages/tela-arquivos.html
@@ -69,7 +69,7 @@
                 <hr>
             </div>
 
-            <div class="gridContainerArquivos">
+            <div class="gridContainerArquivos" id="listaAarquivos">
                 <div class="gridItemArquivos">
                     <div class="fileCapition">
                         <i class="fas fa-project-diagram diagram-caption"></i>
